--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "picklists",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.19.0"
+  },
   "description": "A MERN app that creates inventory picklists for backstock retrieval",
   "main": "server.js",
   "scripts": {
