--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,39 +3,9 @@
   "name": "Picklists - Control Opportunities in Inventory.",
   "icons": [
     {
-      "src": "/assets/img/logo-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png"
-    },
-    {
-      "src": "/assets/img/logo-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/favicon.svg",
+      "sizes": "48x48 72x72 96x96 128x128 256x256 384x384 512x512",
+      "purpose": "maskable any"
     }
   ],
   "start_url": ".",
