--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,9 +3,39 @@
   "name": "Picklists - Control Opportunities in Inventory.",
   "icons": [
     {
-      "src": "/assets/img/logo.svg",
-      "sizes": "48x48 72x72 96x96 128x128 256x256 384x384 512x512",
-      "purpose": "maskable any"
+      "src": "/assets/img/logo-48x48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/assets/img/logo-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/assets/img/logo-144x144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/assets/img/logo-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/assets/img/logo-256x256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
+      "src": "/assets/img/logo-384x384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    },
+    {
+      "src": "/assets/img/logo-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
