--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "redux-watch": "^1.2.0",
     "use-sound": "^2.2.0",
     "web-vitals": "^1.1.2"
   },
