--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.8",
